--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@
       text-align: center;
       font-weight: 300;
       font-size: 30px;
-      padding-top: 60%;
+      padding-top: 40%;
+      padding-bottom: 80%;
     }
 
     h2 {
